--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,7 @@ server.tempDir = /temp
 server.maxFileSizeBytes = 512000
 
 # https://github.com/tesseract-ocr/tessdoc/blob/master/Data-Files-in-different-versions.md
-tesseract.installedLanguages = eng;nor;swe;dan;deu;fra;rus;jpa;lat;equ;
+tesseract.installedLanguages = eng;nor;swe;dan;deu;fra;rus;lat;equ;
 tesseract.languagesFile = tesseract-supported-languages.json
 #tesseract.installFullPath = C:\\Program Files\\Tesseract-OCR\\tessdata
 tesseract.installFullPath = ./.apt/usr/share/tesseract-ocr/4.00/tessdata
