--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ server.port = 8080
 
 server.tokenHeaderName = apiKey
 server.apiKeys = BjJGa886Wk6Evwwn8BPkmSeHD3WRxHhC;10a131018ee742969f8cbe426475eda8
-server.tempDir = /temp
+server.tempDir = temp
 #server.tempDir = d:\\temp
 server.maxFileSizeBytes = 512000
 
