push for new buildpack

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,19 @@
-## Server Properties
+# Project info
+project.basePackage = com.tesseract.api
+project.creator = dev
+project.url = .
+project.email = @
+project.title = Tesseract API
+project.desc = API for image reading with Tesseract.
+project.version = 0.0.1
+project.isTestProject = false
+
+# Server Properties
 server.host = localhost
 #server.port = 16672
 server.port = 8080
+server.resourceDir = main
+server.envPath = src\\main\\resources\\.env
 
 server.tokenHeaderName = apiKey
 server.apiKeys = BjJGa886Wk6Evwwn8BPkmSeHD3WRxHhC;10a131018ee742969f8cbe426475eda8
