--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
 		<kotlin.version>1.3.61</kotlin.version>
 		<testcoverage.target>0.00</testcoverage.target>
 
+		<dotenv.version>5.2.1</dotenv.version>
 		<tess4j.version>4.5.5</tess4j.version>
 		<fasterxml.version>2.8.9</fasterxml.version>
 		<gson.version>2.8.8</gson.version>
@@ -38,6 +39,13 @@
 			<groupId>net.sourceforge.tess4j</groupId>
 			<artifactId>tess4j</artifactId>
 			<version>${tess4j.version}</version>
+		</dependency>
+
+		<!-- Get environment variables from .env file -->
+		<dependency>
+			<groupId>io.github.cdimascio</groupId>
+			<artifactId>java-dotenv</artifactId>
+			<version>${dotenv.version}</version>
 		</dependency>
 
 		<!-- Databases -->
@@ -115,11 +123,6 @@
 			<artifactId>springfox-swagger-ui</artifactId>
 			<version>${springfox.version}</version>
 		</dependency>
-<!--		<dependency>-->
-<!--			<groupId>org.springdoc</groupId>-->
-<!--			<artifactId>springdoc-openapi-ui</artifactId>-->
-<!--			<version>${springdoc.version}</version>-->
-<!--		</dependency>-->
 
 		<!-- To test REST APIs -->
 		<dependency>
