--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
 
 		<dotenv.version>5.2.1</dotenv.version>
 		<tess4j.version>4.5.5</tess4j.version>
-		<fasterxml.version>2.8.9</fasterxml.version>
+		<fasterxml.version>2.12.5</fasterxml.version>
 		<gson.version>2.8.8</gson.version>
 		<springboot.version>2.1.0.RELEASE</springboot.version>
 		<restassured.version>4.1.2</restassured.version>
@@ -57,8 +57,8 @@
 
 		<!-- JSON -->
 		<dependency>
-			<groupId>com.fasterxml.jackson.dataformat</groupId>
-			<artifactId>jackson-dataformat-xml</artifactId>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-core</artifactId>
 			<version>${fasterxml.version}</version>
 		</dependency>
 		<dependency>
@@ -167,7 +167,6 @@
 			<plugin>
 				<groupId>org.jetbrains.kotlin</groupId>
 				<artifactId>kotlin-maven-plugin</artifactId>
-				<version>${kotlin.version}</version>
 
 				<configuration>
 					<args>
